end/deployments/ingress/consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: edgex-consul
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
  - host: edgex-cluster
    http: 
      paths: 
      - path: 
        backend: 
          serviceName: edgex-core-consul
          servicePort: 8500
