end/deployments/ingress/edgex-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: edgex-ui-go
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
  - host: edgex-ui
    http: 
      paths: 
      - path: 
        backend: 
          serviceName: edgex-ui-go
          servicePort: 4000
